        "Atmel AVR ATtiny85 8-Pin packages",
        "Atmel AVR ATtiny85 20-Pin packages",
        "Microchip PIC16F1512 28-Pin SPDIP, SOIC, SSOP",
        "Microchip PIC16F1516 28-Pin SPDIP, SOIC, SSOP",
        "Microchip PIC16F1527 64-Pin packages",
        "Microchip PIC16F1824 14-Pin PDIP, SOIC, TSSOP",
        "Microchip PIC16F1827 18-Pin PDIP, SOIC",
        "Microchip PIC10F202 6-SOT"


== Release 5.3.1.0

    * Fixed flashMcu.bat and LIBRARIES_FOR ARM,AVR, PIC by Jose GILLES

    * Modified "St ARM STM32F40X 144-LQFP" by Jose GILLES

    * Added "St ARM STM32F10X 48-LQFP / Bluepill" by Jose GILLES

    * Fixed OSR, OSF, OSL, OSC show error.

    * Fixed AVR compilation stack overflow error.

    * Fixed flashMcu.bat for AVR

    * Fixed LUT index range in simulation.

    * Fixed PIC UART baud rate calculation.

    * Fixed PICs PORTA outputs still stay in analog mode in generated C source code.
      Added setPortDigitalIO()

    * Fixed When compiling Hex/Asm with PIC target and then calling FlashMcu, the window still closes
      immediately without a word...

== Release 5.3.0.5

    * Fixed flashMcu.bat and LIBRARIES_FOR ARM,AVR, PIC by Jose GILLES

    * Added: Microchip PIC12F675 8-pin packages

    * Added: Microchip PIC16F72 28-Pin PDIP, SOIC, SSOP

    * Added: Atmel AVR ATtiny10 6-Pin packages

== Release 5.3.0.4

    * Added: Menu Settings->Set Pull-up input resistors.
    All input pins try to set Pull-up registers by default.
    Attention: Not all ports have a pull-up resistor.
    See datasheets of the controller for details.

    * Added: PIC12F683 8-pin.

    * Added: ESP8266. ANSIC compiler only.

    * Fixed: Pins PB6 and PB7 are available for general I/O use when
    the internal clock source is selected.
    MCU list: ATmega8, ATmega48, ATmega88, ATmega168, ATmega328.
    Note: LDmicro not provided any clock source manipulation.
    Discussion here: http://cq.cx/ladder-forum.pl?action=viewthread&amp;parent=8416&amp;tt=1555027659
